Picture, cards and about message

--- a/index.html
+++ b/index.html
@@ -65,15 +65,16 @@
        <section class="container-fluid px-0">
         <div class="row align-items-center">
           <div class="col-lg-6">
-            <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
+          <!--  <div id="headingGroup" class="text-white text-center d-none d-lg-block mt-5">
 
-               <h1 class=""> Autenjo!!</h2>
+               <h1 class=""> Autenjo!!</h1>
 
 
-            </div>
+            </div> -->
          </div>
-               <div class="col-lg-6">
-               <img class="img-fluid" src="imgs/Autism-Awareness-Blog-1200x675.jpg" alt="">
+               <div class="col-lg-12">
+               <img class="img-fluid" src="imgs/st,small,845x845-pad,1000x1000,f8f8f8.jpg" alt="" style="height: 700px; width: 1000px; margin-bottom: 30px; margin-left: 150px; margin-top: 50px;">
+             </br>
 
         </div>
       </div>
@@ -107,10 +108,8 @@
                      <div class="card">
                          <img class="card-img-top" src="https://cdn.hipwallpaper.com/i/61/22/0HUjMu.jpg" alt="">
                          <div class="card-body">
-                             <h5 class="card-title">Trees</h5>
-                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corrupti quam magnam!
-                                 Veniam, dolorum facere?
-                                 Commodi, ut. Et, itaque quam!</p>
+                             <h5 class="card-title">Therapy</h5>
+                             <p class="card-text">You can see the doctors giving therapies to those suffering from Autism and can also see many different types of treatments which the family or any professional can give to improve the condition of Autism.</p>
                              <a href="" class="btn btn-outline-success btn-sm">Download</a>
                              <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
                          </div>
@@ -120,10 +119,8 @@
                      <div class="card">
                          <img class="card-img-top" src="https://wallpaperaccess.com/full/847731.jpg" alt="">
                          <div class="card-body">
-                             <h5 class="card-title">Ocean</h5>
-                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corrupti quam magnam!
-                                 Veniam, dolorum facere?
-                                 Commodi, ut. Et, itaque quam!</p>
+                             <h5 class="card-title">Entertainment</h5>
+                             <p class="card-text">Getting bored in this covid-19 quarantined time! You can play various games like  car racing, Marathon and many more. You can also listen to various rhymes which will make you feel calm.</p>
                              <a href="" class="btn btn-outline-success btn-sm">Download</a>
                              <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
                          </div>
@@ -133,10 +130,8 @@
                      <div class="card">
                          <img class="card-img-top" src="https://wallpaperaccess.com/full/232781.jpg" alt="">
                          <div class="card-body">
-                             <h5 class="card-title">Wildlife</h5>
-                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corrupti quam magnam!
-                                 Veniam, dolorum facere?
-                                 Commodi, ut. Et, itaque quam!</p>
+                             <h5 class="card-title">Learning</h5>
+                             <p class="card-text">Worried about studies? Don't worry we will help you learn maths by making you solve those questions and in any problem giving you the option to see the correct answer.</p>
                              <a href="" class="btn btn-outline-success btn-sm">Download</a>
                              <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
                          </div>
@@ -184,30 +179,31 @@
 
 
                     fist one -->
-    <section class="container-fluid px-0">
-      <div class="row align-items-center content ">
 
-        <div class="col-md-6 order-2 order-md-1">
-       <a href="https://www.youtube.com/">
-       <img src="imgs/milk.png" alt="" class="img-fluid" >
-     </a>
-        </div>
+                    <!-- <section class="container-fluid px-0">
+                      <div class="row align-items-center content ">
 
-        <div class="col-md-6 text-center order-1 order-md-2">
-         <div class="row justify-content-center">
-           <div class="col-10 col-lg-8 blurb">
-            <h2>IDEOS </h2>
-            <img src="imgs/lolli_icon.png" alt="" class="d-none_d-lg-inline">
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt
-              in voluptatibus
-              .</p>
-           </div>
-         </div>
-        </div>
+                        <div class="col-md-6 order-2 order-md-1">
+                       <a href="https://www.youtube.com/">
+                       <img src="imgs/milk.png" alt="" class="img-fluid" >
+                     </a>
+                        </div>
+
+                        <div class="col-md-6 text-center order-1 order-md-2">
+                         <div class="row justify-content-center">
+                           <div class="col-10 col-lg-8 blurb">
+                            <h2>IDEOS </h2>
+                            <img src="imgs/lolli_icon.png" alt="" class="d-none_d-lg-inline">
+                            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, iste molestiae beatae, maiores deserunt
+                              in voluptatibus
+                              .</p>
+                           </div>
+                         </div>
+                       </div>
       </div> -->
 
       <!-- ==============SECOND ONE================== -->
-      <div class="row align-items-center content">
+      <!--<div class="row align-items-center content">
         <div class="col-md-6 order-1 order-md-2">
           <img src="imgs/gumball.png" alt="" class="img-fluid">
         </div>
@@ -222,9 +218,9 @@
           </div>
 
         </div>
-      </div>
+      </div> -->
       <!-- ==================THIRD ONE===================== -->
-      <div class="row align-items-center content ">
+    <!--  <div class="row align-items-center content ">
         <div class="col-md-6 order-2 order-md-1">
           <img src="imgs/sprinkles.png" alt="" class="img-fluid">
         </div>
@@ -249,7 +245,12 @@
 
 
 
-    </section>
+    </section> -->
+
+    <h2 style="text-align: center !important">Why choose Autenjo?</h2>
+    <p class="container">Autism is a developemental disorder characterized by difficulties with social interaction and communication and by restricted and repetitive behavior it is observed that autistic children are deprived of the normal pleasures of life, also there coginitive and learning style needs to be answered differently .
+Our website Autenjo provides the opportunity to  see the doctors giving therapies to those suffering from Autism and can also see many different types of treatments which the family or any professional can give to improve the condition of Autism especially in this period of lockdown. Parents can adopt various useful therapies advised by renowned experts. Our website also provides learning opportunity for autistic children math can be made easier through interesting puzzle games and many such methods. Our website will definitely bring a ‘BIG SMILE ‘ on the faces of our autistic friends we can bring terms of entertainment in their life through interesting games, poetry and stories. Our aim is to make learning easy for autistic children. Also we want to add a lot of joy and happiness in their life, valuable suggestion from doctors and leading experts will definitely help to less the problem that the parents undergo while dealing with their autistic kids .
+So, choose our website and bring a big change in your as well as your kid’s life</p>
 
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -267,5 +268,6 @@
         });
       });
     </script>
+
   </body>
 </html>
